site/_themes/hyde/css/styles.css
@import "./font-abril-fatface.css";
@import "./font-pt-sans.css";

@import "./poole.css";
@import "./hyde.css";

@import "highlight.js/styles/github-dark.css";

:root {
   --color-sidebar: #8e560c;
}

/* article {content-visibility: auto;} */
article img {
   width: 100%;
   height: auto;
}

/* Poole & Hyde default CSS does not pass today's lighthouse tests */

a {
   color: #1a6091;
} /* darken(#268bd2, 15%); */
.post-date {
   color: #747474;
   font-size: 90%;
} /* darken(#9a9a9a, 15%); */
.related-posts li small {
   color: #747474;
}

.sidebar-nav-item {
   line-height: 2.75;
}
@media (min-width: 48em) {
   .sidebar-nav-item {
      line-height: 1.75;
   }
}

/* WCAG2AA sidebar & example-content page */
.sidebar {
   color: rgb(255, 255, 255, 0.7);
}
blockquote {
   color: #666666;
} /* darken(#7a7a7a, 8%) */
code {
   color: #b04751;
} /* darken(#bf616a, 8%) */

/* As base-16 colors had to be reset */
.theme-base-0b .sidebar {
   background-color: var(--color-sidebar);
}
.theme-base-0b .content a,
.theme-base-0b .related-posts li a:hover {
   color: #690900;
}

.copyright-container {
   display: flex;
   justify-content: flex-end;
}

.copyright {
   right: 2rem;
   opacity: 0.5;
   margin-right: 1rem;
   margin-bottom: 1.5rem;
   font-size: 0.8rem;
   display: flex;
   align-items: center;
}

.copyright .logo {
   height: 12px;
}

.copyright .logo svg {
   height: 100%;
   width: 100%;
}

.post-title {
   margin-bottom: var(--space-xs);
}

.social {
   display: flex;
   gap: 1rem;
   place-content: center;
}

.social img {
   margin: 0;
   max-height: 100%;
}

@media (min-width: 48em) {
   .social {
      place-content: start;
      margin-bottom: 1rem;
      height: 2rem;
   }

   .social a {
      width: 2rem;
   }
}

.profile_pic {
   width: 100%;
   max-width: 300px;
   margin: auto;
   margin-bottom: 2rem;
}

.featured-projects h2 {
   margin-bottom: var(--space-sm);
}

.index-content {
   margin-bottom: var(--space-lg);
}

.post {
   margin-bottom: var(--space-lg);
}

.post .post-tile {
   color: var(--color-heading);
}

.post .meta {
   color: var(--color-heading);
}

